# fornova-test-task

./: README.md
message_broker/: main.py  pyproject.toml
task2/: README.md  compose.yml
task2/api/: .env_example  config.py  main.py  pyproject.toml
task2/test_runner/: .env_example  Dockerfile  config.py  handlers.py  main.py  pyproject.toml  schemas.py
task3/: README.md  compose.yml
task3/api/: .env_example  Dockerfile  compose.yml  config.py  crud.py  database.db  database.py  main.py  models.py  producer.py  pyproject.toml  routers.py  ruff.toml
task3/rabbitmq_test/: consumer.py  producer.py  pyproject.toml
task3/test_runner/: .env_example  Dockerfile  config.py  handlers.py  main.py  pyproject.toml  test_handlers.py
test_runner/: .env_example  README.md  config.py  handlers.py  handlers_old.py  main.py  pyproject.toml
